# zotero-dump-markdown

./: README.md  dump.py  pyproject.toml  requirements.txt
zotero_dump_markdown/: dump.py
